--- a/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
     ViewBag.Title = "TestCSS";
 }
-
-<h2>TestCSS</h2>
     @Styles.Render("~/Content/css")
-<header>
+<body>
+    <div class="TopMailDiv">
+        osv osv
+    </div>
         <div class="Menu">
         <ul>
             <li><a href="#">Startsida</a>
@@ -30,7 +31,19 @@
                 </div>
             </li>
         </ul>
-
+   
+            
     </div>
+    <div class="test">
 
-    </header>
+            <div class="LeftBoxDiv">
+                Populäraste produkter
+            </div>
+                     <div class="ContentBoxDiv">
+                content
+            </div>
+        <div class="RightBoxDiv">
+            HÖGERBOX
+        </div>
+        </div>
+    </body>
