--- a/GymHuset/GymHuset/Content/Site.css
+++ b/GymHuset/GymHuset/Content/Site.css
@@ -9,38 +9,64 @@ header, footer, nav, section {
     display: block;
 }
 
+.test {
+    float: left;
+    top: 280px;
+    /*position:absolute;*/
+    /*position:fixed;*/
+    width: 100%;
+}
 
 .TopMailDiv {
+    top:0px;
+    left: 25%;
+    color: white;
+    height: 30px;
+    position: fixed;
+    margin-top:0px;
 }
 
 .ContentBoxDiv {
+    color: white;
+    width: 60%;
+    float: left;
+    margin: 2%;
+    height:500px;
 }
 
+
 .LeftBoxDiv {
+    color: white;
+    width: 18%;
+    height: 150px;
+    margin: 0;
+    float: left;
+    margin-top:5px;
 }
 
 .RightBoxDiv {
+    margin-top:5px;
+    color: white;
+    width: 18%;
+    float: left;
 }
 
 
 /*MENYBAR*/
 
 .Menu {
-    position: fixed;
-    left: 0;
-    top: 0;
+    text-transform: uppercase;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
     padding: 0;
-    height:500px;
-    margin-top:300px;
+    height: 60px;
+    margin-top: 200px;
 }
 
-    /*
-    Matchar samtliga <ul> innuti <div class="menu"> för att ta bort margin, padding och list-style-type
-    */
+
+    /*Matchar samtliga <ul> innuti <div class="menu"> för att ta bort margin, padding och list-style-type*/
+
     .Menu ul {
         padding: 0;
         list-style: none;
@@ -49,21 +75,20 @@ header, footer, nav, section {
         font-family: Arial;
     }
 
-    /*
-    Matchar första <ul> innuti <div class="menu">, dvs. meny-baren.
-    */
+
+    /*Matchar första <ul> innuti <div class="menu">, dvs. meny-baren.*/
+
     .Menu > ul {
-        /*background: rgba(1, 0, 0, 0.5);*/
+        background: rgba(1, 0, 0, 0.5);
         background: rgba(75, 78, 92, 0.8);
         width: 1000px;
         margin: 0 auto;
         height: 60px;
-
     }
 
-    /*
-    Matchar samtliga <a>-taggar innuti <div class="menu">
-    */
+
+    /*Matchar samtliga <a>-taggar innuti <div class="menu">*/
+
     .Menu a {
         /*background-image:url(bar2.png);*/
         display: block;
@@ -71,7 +96,6 @@ header, footer, nav, section {
         font-family: sans-serif;
         color: white;
         text-decoration: none;
-
     }
 
     .Menu ul ul a {
