--- a/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
     ViewBag.Title = "TestCSS";
 }
+
+<h2>TestCSS</h2>
     @Styles.Render("~/Content/css")
-<body>
-    <div class="TopMailDiv">
-        osv osv
-    </div>
+<header>
         <div class="Menu">
         <ul>
             <li><a href="#">Startsida</a>
@@ -31,19 +30,7 @@
                 </div>
             </li>
         </ul>
-   
-            
-    </div>
-    <div class="test">
 
-            <div class="LeftBoxDiv">
-                Populäraste produkter
-            </div>
-                     <div class="ContentBoxDiv">
-                content
-            </div>
-        <div class="RightBoxDiv">
-            HÖGERBOX
-        </div>
-        </div>
-    </body>
+    </div>
+
+    </header>
