--- a/GymHuset/GymHuset/Views/Produkter/Index.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/Index.cshtml
@@ -18,6 +18,7 @@
         height:275px;
         background-color:white;
         margin:5px;
+        color:black;
     }
 
         .productWrapper div {
