Lägga till produkt

--- a/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/TestCSS.cshtml
@@ -7,7 +7,7 @@
 <header>
         <div class="Menu">
         <ul>
-            <li><a href="#">Startsida</a>
+            <li><a href="Index">Startsida</a>
                 <div>
                     <ul>
                         <li><a href="personlig-ogonkirurgi.html">PERSONLIG ÖGONKIRUGI</a></li>
