--- a/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
+++ b/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
 
             <div class="LeftBoxDiv">
                 Populäraste produkter
+                @Html.Action("_PopProductsPartial", "Layout")
             </div>
                      <div class="ContentBoxDiv">
                     @RenderBody()
