Kommentarer till kod

--- a/GymHuset/GymHuset/Views/Produkter/Index.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/Index.cshtml
@@ -7,11 +7,13 @@
 
 <style type="text/css">
     
+    /* Behållare för en rad av produktrutor */
     #productListing {
         width:1040px;
         float:left;
     }
     
+    /* Behållare för en produktruta */
     .productWrapper {
         float:left;
         width:200px;
@@ -20,16 +22,18 @@
         margin:5px;
         color:black;
     }
-
+        /* Egenskaper för alla div-ar innuti productWrapper */
         .productWrapper div {
             margin:5px;
         }
 
+    /* Produktbeskrivning */
     .productDescription {
         border-top:ridge;
         border-bottom:ridge;
     }
 
+    /* Bild på produkten */
     .productIMG {
         margin:0 auto;
         height:100px;
