--- a/GymHuset/GymHuset/Views/Produkter/Index.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/Index.cshtml
@@ -42,7 +42,7 @@
 
 
 </style>
-
+@Html.ActionLink("Admin sidan", "AdminSidan", "Admin")
 <h2>Erbjudanden</h2>
 @Html.ActionLink("Kundkorg", "CartAdd", "Cart")
 <div>
