--- a/GymHuset/GymHuset/Views/Admin/AdminSidan.cshtml
+++ b/GymHuset/GymHuset/Views/Admin/AdminSidan.cshtml
@@ -8,3 +8,5 @@
 @Html.ActionLink("Lägg till produkt", "AdderaProdukt")
 <br />
 @Html.ActionLink("Ta bort produkt", "TaBortProdukt")
+
+@Html.ActionLink("Tillbaka", "Index","Produkter")
