--- a/GymHuset/GymHuset/Content/Site.css
+++ b/GymHuset/GymHuset/Content/Site.css
@@ -18,12 +18,14 @@ header, footer, nav, section {
 }
 
 .TopMailDiv {
+    width:100%;
     top:0px;
-    left: 25%;
+    text-align:center;
     color: white;
     height: 30px;
     position: fixed;
     margin-top:0px;
+    background-color:black;
 }
 
 .ContentBoxDiv {
