Facebook+fixad kundkorgsURL

--- a/GymHuset/GymHuset/Views/Produkter/Index.cshtml
+++ b/GymHuset/GymHuset/Views/Produkter/Index.cshtml
@@ -44,7 +44,7 @@
 </style>
 @Html.ActionLink("Admin sidan", "AdminSidan", "Admin")
 <h2>Erbjudanden</h2>
-@Html.ActionLink("Kundkorg", "CartAdd", "Cart")
+@Html.ActionLink("Kundkorg", "Kundkorg", "Cart")
 <div>
 
     <div id="productListing">
