--- a/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
+++ b/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
@@ -8,7 +8,14 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
     <body>
-
+        <div id="fb-root"></div>
+<script>(function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/sv_SE/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <div class="TopMailDiv">
         Maila oss på ProteinGossarna@Lunarstorm.se
     </div>
@@ -54,10 +61,7 @@
                     @RenderSection("scripts", required: false)
                     <div />
             </div>
-            <div class="RightBoxDiv">
-                @* Facebookfeed? Sökfunktion? till höger *@
-                HÖGERBOX
-            </div>
+         <div class="fb-like-box" data-href="https://www.facebook.com/pages/Sweprotte/1426843010891655" data-width="275" data-height="500" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
         </div>
     </body>
 </html>
