--- a/GymHuset/GymHuset/Views/Cart/Kundkorg.cshtml
+++ b/GymHuset/GymHuset/Views/Cart/Kundkorg.cshtml
@@ -42,6 +42,8 @@
                         }                        
                         <div class="productPrice">
                             Pris: @p.iPrice
+                        </div> <div class="productQuantity">
+                            Antal: @p.iCount
                         </div>
                       
                         <div class="addtobasket">
