--- a/GymHuset/GymHuset/Views/Admin/AdminSidan.cshtml
+++ b/GymHuset/GymHuset/Views/Admin/AdminSidan.cshtml
@@ -9,5 +9,6 @@
 <br />
 @Html.ActionLink("Ta bort produkt", "TaBortProdukt")
 <br />
+@Html.ActionLink("Orders", "Orders", "Admin")
 <br />
 @Html.ActionLink("Tillbaka", "Index","Produkter")
