--- a/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
+++ b/GymHuset/GymHuset/Views/Shared/_Layout.cshtml
@@ -53,6 +53,11 @@
         </div>
         <div class="test">
             @Html.Action("_CartSmall", "Layout") @*Visar antal produkter i kundkorg+summa*@
+        @using (Html.BeginForm())
+{ 
+    @Html.TextBox("searchString")
+    <input type="submit" value="Sök" />     
+}
             <div class="LeftBoxDiv">
                 @* Border med top 5 populära produkter, till vänster *@
                 Populäraste produkter
